--- a/pagetwo.html
+++ b/pagetwo.html
@@ -1,5 +1,7 @@
 <html>
     <head> <title></title>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style></style>
     <link rel="stylesheet" href="pagetwo.css" type="text/css">
     </head>
